resources/sass/app.scss
/* ... */
.x-module-name {
	word-wrap: break-word;
	overflow: hidden;
}

.x-course-module-status,
.x-course-status,
.x-module-status,
.x-module-modname,
.x-forum-discussion-status,
.x-folder-entry-status {
	text-align: right;
	color: gray;
	font-size: small;
}

.x-module-info {
	width: 20px;
	margin-bottom: 3.5px;
	background:url('../images/info.png');
	background-repeat: no-repeat;
	background-position: right bottom;
}

.x-module-intro,
.x-calendar-event-description {
	padding: 10px;
	margin-top: 3px;
	border: 2px solid gray;
	border-radius: 7px;
	background-color: white;
}
.x-calendar-event-description {
	margin-left: 0px;
}

.x-grade-data {
	text-align: right;
	color: black;
	font-size: 1.1em;
}

.x-grade-is-passing-grade {
	color: green;
}

.x-grade-is-not-passing-grade {
	color: red;
}

.x-grade-passing-grade {
	color: gray;
	font-size: small;
}

.participant {
	border-bottom: 1px solid $border-color;
	background-color: white;
	padding: 5px;
	padding-top: 10px;
	padding-bottom: 7px;
}

.x-participant-firstname {
	margin-left: 5px;
	margin-right: 5px;
}

.x-participant-email {
	color: gray;
	font-size: small;
	margin-top: -10px;
	padding-left: 40px;
	margin-bottom: 7px;
}

.x-participant-networks {
	height: 16px;
}

.participant-selected {
	background-color: white;
}

.x-participant-contact-button {
	margin-top: 10px;
}

.x-calendar-event-timestart,
.x-calendar-event-timeduration {
	color: gray;
	font-size: small;
}

/*
 *
 * Forum related classes
 *
 * */

.x-forum-discussion {
	padding-top: 15px;
}

.forum-post-list {	
}

.forum-intro,
.forum-post {
	margin-bottom: 10px;
	border: 1px solid $border-color;
	padding: 5px;
	word-break: break-all;
}

.forum-post-selected {
	background-color: white;
}

.x-post-firstname {
	margin-top: -10px;
	margin-left: 5px;
	margin-right: 5px;
}

.x-post-lastname {
	margin-top: -10px;
}

.x-post-date {
	position: relative;
	top: -12px;
	left: 42px;
	color: gray;
	font-size: small;
}

.x-post-subject {
	font-weight: bold;
	padding-top: 10px;
}

.x-post-message {
	padding-top: 10px;
	padding-bottom: 10px;
}

.x-post-indentation-0 {}

.x-post-indentation-1 {
	width: 98% !important;
	margin-left: 2%;
}

.x-post-indentation-2 {
	width: 96%;
	margin-left: 4%;
}

.x-post-indentation-3 {
	width: 94%;
	margin-left: 6%;
}

.x-post-indentation-4 {
	width: 92%;
	margin-left: 8%;
}

.x-post-indentation-5 {
	width: 90%;
	margin-left: 10%;
}

.x-post-indentation-6 {
	width: 88%;
	margin-left: 12%;
}

.x-post-indentation-7 {
	width: 86%;
	margin-left: 14%;
}

.x-post-indentation-8 {
	width: 84%;
	margin-left: 16%;
}

.x-post-indentation-9 {
	width: 82%;
	margin-left: 18%;
}

.x-post-indentation-10 {
	width: 80%;
	margin-left: 20%;
}

.x-post-attachment-list {
	padding-top: 15px;
	.x-post-attachment-entry {
		.x-post-attachment-file {
			color: $active-color;
		}
	}
}

.x-post-reply {
	.parent-post {
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
		padding: 10px;
		.userinfo {
			margin-bottom: 10px;
		}

		.content {
			.subject {
				margin-bottom: 10px;
			}
		}
	}
}

/*
 *
 * Assignment and Choices related classes
 *
 * */
.assignment-intro,
.assignment-previous-submission,
.assignment-chosen-files-list,
.choice-intro,
.choice-status,
.activity-dates {
	background-color: white;
	padding: 5px;
	padding-top: 10px;
	padding-bottom: 10px;
}

.activity-dates {
	margin-top: 10px;
}

.assignment-chosen-files-list div.file-entry {
	margin-bottom: 5px;
}

.assignment-previous-submission,
.choice-status {
	margin-top: 10px;
}

.fileslot-filename {
	padding-top: 15px;
	padding-left: 10px;
	font-weight: bold;
	color: gray;
	font-style: italic;
}

/*
 *
 * Assign and Assignment related classes
 *
 * */
.assignment{
	.intro{
		padding: 5px;
	}

	.intro,
	.text-submission,
	.file-submission{
		background-color: white;
		.label { }
		ul {
			margin-bottom: 0;
		}
	}
	
	.dates,
	.last-submission {
		margin-top: 10px;
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
	}

	.toosoon,
	.toolate,
	.noresubmit,
	.lastsubmissionwasfinal {
		padding-top: 10px;
		padding-bottom: 10px;
		background-color: white;
		color: red;
		text-align: center;
		font-weight: bold;
	}
}

/*
 *
 * Page related classes
 *
 * */
.page{
	.name {
		font-weight: bold;
	}

	.name,
	.intro,
	.content {
		width: 100%;
		max-width: 100%;
		margin-top: 10px;
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
	}
}

.progress-bar {
	text-align: left;
	background-color: #333333;
	height: 25px;
	width: 100%;
	margin: 50px 0;			
	-webkit-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
	box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;	          
}

.progress-bar span {
	display: inline-block;
	background-color: white;
	height: 100%;	
	-webkit-border-radius: 3px;
	border-radius: 3px;
	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
    -webkit-transition: width .4s ease-in-out;
    transition: width .4s ease-in-out;    
}

/*
 *
 * Book related classes
 *
 * */
.book{
	.x-floating {
		background-color: white !important;
		-webkit-box-shadow: none;
		box-shadow: none;
		border-radius: 0;
	}
	.index {
		font-size: normal;
		border-right: 1px solid $border-color;
		background-color: white;
		-webkit-transition: left 0.5s;
		-moz-transition: left 0.5s;
		-o-transition: left 0.5s;
		transition: left 0.5s;
		.chapter { }
		.subchapter { margin-left: 10px; }
	}

	.content {
		-webkit-transition: width 0.5s, left 0.5s;
		-moz-transition: width 0.5s, left 0.5s;
		-o-transition: width 0.5s, left 0.5s;
		transition: width 0.5s, left 0.5s;
	}
}
/* ... */

